--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.2.2",
-    "ui-design-web-components": "file:ui-design-web-components-0.0.1.tgz",
+    "design-web-components": "file:design-web-components-v0.0.1.tgz",
+    "ui-icons": "file:ui-icons-v0.0.1.tgz",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-react": "^7.24.0",
