--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@stencil/core": "^2.7.0"
+    "@stencil/core": "^2.7.0",
+    "nextjs-magnolia-connector": "./nextjs-magnolia-connector-v0.1.1.tgz",
+    "design-web-components": "file:design-web-components-v0.0.3.tgz",
+    "ui-icons": "file:ui-icons-v0.0.1.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -54,8 +57,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "2.3.2",
     "puppeteer": "^10.0.0",
-    "typescript": "^4.3.5",
-    "ui-icons": "file:ui-icons-v0.0.1.tgz"
+    "typescript": "^4.3.5"
   },
   "license": "MIT"
 }
