--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@stencil/core": "2.7.0",
-    "design-web-components": "file:design-web-components-v0.0.3.tgz",
+    "@stencil/core": "^2.7.0",
+    "design-web-components": "./design-web-components-v0.0.3.tgz",
     "nextjs-magnolia-connector": "./nextjs-magnolia-connector-v0.1.1.tgz",
-    "ui-icons": "file:ui-icons-v0.0.1.tgz"
+    "ui-icons": "file:ui-icons-v0.0.1.tgz",
+    "ui-utils": "./ui-utils-v1.0.0.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
