--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.7.0",
-    "nextjs-magnolia-connector": "./nextjs-magnolia-connector-v0.1.1.tgz",
-    "ui-utils": "./ui-utils-v1.0.0.tgz"
+    "nextjs-magnolia-connector": "./nextjs-magnolia-connector-v0.1.1.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -57,6 +56,9 @@
     "prettier": "2.3.2",
     "puppeteer": "^10.0.0",
     "typescript": "^4.3.5"
+  },
+  "resolutions": {
+    "ui-utils": "./ui-utils-v1.0.0.tgz"
   },
   "license": "MIT"
 }
